[TASK] Add extension key to composer configuration

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
         "psr-4": {
             "CHF\\Bandsintown\\": "Classes"
         }
+    },
+    "extra": {
+        "typo3/cms": {
+            "extension-key": "bandsintown"
+        }
     }
 }
